@@ -46,8 +46,8 @@ structure has the following definition:
 .PP
 .CS
 typedef struct Tcl_Time {
-    long sec;
-    long usec;
+    long \fIsec\fR;
+    long \fIusec\fR;
 } \fBTcl_Time\fR;
 .CE
 .PP
