@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: Object.3,v 1.6.4.11 2008/10/17 20:52:23 dgp Exp $
+'\" RCS: @(#) $Id: Object.3,v 1.6.4.12 2008/12/18 23:19:07 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_Obj 3 8.5 Tcl "Tcl Library Procedures"
@@ -334,8 +334,8 @@ by inserting \fIobjc-3\fR new elements before \fIindex\fR.
 .PP
 .CS
 listPtr = objv[1];
-if (Tcl_IsShared(listPtr)) {
-    listPtr = Tcl_DuplicateObj(listPtr);
+if (\fBTcl_IsShared\fR(listPtr)) {
+    listPtr = \fBTcl_DuplicateObj\fR(listPtr);
 }
 result = Tcl_ListObjReplace(interp, listPtr, index, 0,
         (objc-3), &(objv[3]));
