@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: PkgRequire.3,v 1.6.4.3 2006/10/23 21:01:23 dgp Exp $
+'\" RCS: @(#) $Id: PkgRequire.3,v 1.6.4.4 2008/12/18 23:19:07 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_PkgRequire 3 7.5 Tcl "Tcl Library Procedures"
@@ -61,7 +61,6 @@ Number of requirements.
 .AP Tcl_Obj* objv[] in
 Array of requirements.
 .BE
-
 .SH DESCRIPTION
 .PP
 These procedures provide C-level interfaces to Tcl's package and
@@ -93,6 +92,7 @@ functions.
 \fBTcl_PkgRequireProc\fR is the form of \fBpackage require\fR handling
 multiple requirements. The other forms are present for backward
 compatibility and translate their invokations to this form.
-
 .SH KEYWORDS
 package, present, provide, require, version
+.SH "SEE ALSO"
+package(n), Tcl_StaticPackage(3)
